--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   background-color: rgba(255, 255, 255, 0.5);
   width: fit-content;
   padding: 2%;
-  margin-inline: auto;
+  margin-inline: 25%;
   margin-top: 5%;
   backdrop-filter: blur(5px);
   border-radius: 2%;
